removed unnecessary object property access